# yeetbot

./: .gitignore  LICENSE  README.md
yeetbot_arduino/: CMakeLists.txt  package.xml
yeetbot_arduino/RFID_test/: RFID_test.ino
yeetbot_arduino/drawer_controller/: drawer_controller.ino
yeetbot_arduino/scripts/: drawer_node.py
yeetbot_bringup/: CMakeLists.txt  package.xml
yeetbot_bringup/launch/: human2.launch  human6.launch  nick.launch  yeetbot.launch
yeetbot_description/: CMakeLists.txt  package.xml
yeetbot_gui/: CMakeLists.txt  package.xml  setup.py
yeetbot_gui/nodes/: setup_vncserver.bash  vncserver.bash  yeet.py
yeetbot_gui/src/yeetbot_gui/: app.py  asset_finder.py  button_option.py  image_label.py
yeetbot_humantracker/: CMakeLists.txt  README.md  package.xml  setup.py
yeetbot_humantracker/launch/: cam_tf.launch  humantracker.launch
yeetbot_humantracker/scripts/: centroidtracker.py  detectpeople.py  human.py  human_stitcher.py
yeetbot_localisation/: CMakeLists.txt  package.xml
yeetbot_localisation/config/: settings.yaml  tags.yaml
yeetbot_localisation/launch/: apriltag.launch  camera_locations.launch  localisation.launch
yeetbot_localisation/nodes/: tag_pose_estimation.py
yeetbot_master_controller/: CMakeLists.txt  package.xml  setup.py
yeetbot_master_controller/nodes/: master.py
yeetbot_master_controller/src/master_controller/: __init__.py
yeetbot_master_controller/src/yeetbot_master_controller/: exceptions.py  human_tracker_interface.py  interfaces.py  item_database.py  navigation_interface.py  state_machine.py  states.py  user_interface.py
yeetbot_msgs/: CMakeLists.txt  package.xml
yeetbot_msgs/msg/: YEETBotDrawerStates.msg  YEETBotHumanPoseArray.msg  YEETBotItemStates.msg  YEETBotState.msg  YEETBotUserChoices.msg  YEETBotUserResponse.msg
yeetbot_natural_language/: CMakeLists.txt  package.xml
yeetbot_natural_language/nodes/: speech_node.py  yeetbot.py
yeetbot_natural_language/pi_speech/: doa.py  keys.json  test.py  yeet_speech.py
yeetbot_navigation/: CMakeLists.txt  dummy.launch  package.xml
yeetbot_navigation/costmaps/: costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml
yeetbot_navigation/launch/: ekf.launch  fake_laser.launch  main_nav.launch  manual_nav.launch  move_base.launch  yeetbot_nav.launch
yeetbot_navigation/maps/: 505_gen.pgm  505_gen.yaml  505_gen2.yaml  KEC_BuildingCorrected.pgm
yeetbot_navigation/meshes/: drawer_frame_part.STL  lidar_holder.STL
yeetbot_navigation/nodes/: kinect_joint_pub.py  laser_nan_node.py  sensortag_imu_node.py
yeetbot_navigation/params/: move_base_params.yaml  recovery_behaviors.yaml
yeetbot_navigation/planners/: base_local_planner_params.yaml  dwa_local_planner_params.yaml  global_planner_params.yaml
yeetbot_navigation/urdf/: display-xacro-with-joint-state-gui.launch  display.launch  display_urdf.rviz  pioneer3at.urdf  pioneer3at.urdf.xacro  rviz.launch  state_publisher.launch  yeet.rviz
