<?xml version="1.0"?>
<package format="2">
  <name>yeetbot_gui</name>
  <version>0.0.0</version>
  <description>The yeetbot_arduino package contains arduino code and a ros node to interface with the arduino.</description>

  <maintainer email="sz4316@ic.ac.uk">Sergey Zhelyabovskiy</maintainer>
  <maintainer email="tjp16@ic.ac.uk">Tom Poskitt</maintainer>
  <license>MIT</license>
  
  <buildtool_depend>catkin</buildtool_depend>
  <depend>rospy</depend>
  <depend>yeetbot_msgs</depend>
</package>
