<?xml version="1.0"?>
<package format="2">
  <name>yeetbot_bringup</name>
  <version>0.0.0</version>
  <description>The yeetbot_bringup package launches the whole YEETBot3000</description>

  <maintainer email="nrh16@ic.ac.uk">Nick Hafner</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
</package>
