<?xml version="1.0"?>
<package format="2">
  <name>yeetbot_gui</name>
  <version>0.0.0</version>
  <description>The yeetbot_gui package contains the facial GUI of YEETBot, allowing for touchscreen interaction with the robot.</description>

  <maintainer email="nrh16@ic.ac.uk">Nick Hafner</maintainer>
  <license>MIT</license>
  
  <buildtool_depend>catkin</buildtool_depend>
  <depend>rospy</depend>
  <exec_depend>python-rospkg</exec_depend>
</package>
