<?xml version="1.0"?>
<package format="2">
  <name>yeetbot_localisation</name>
  <version>0.0.0</version>
  <description>The yeetbot_localisation package contains code to localise YEETBot3000 within ICRS's lab, as well as locate and track people within ICRS's lab.</description>

  <maintainer email="bb2515@ic.ac.uk">Ben Mark</maintainer>
  <maintainer email="tjb16@ic.ac.uk">Tomasz Białas</maintainer>
  <maintainer email="nrh16@ic.ac.uk">Nick Hafner</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>apriltag_ros</depend>
</package>
