<?xml version="1.0"?>
<package format="2">
  <name>yeetbot_master_controller</name>
  <version>0.0.0</version>
  <description>The yeetbot_master_controller package contains the master node to control the state machine and high level decisions of the robot.</description>

  <maintainer email="nrh16@ic.ac.uk">Nick Hafner</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>rospy</depend>
  <depend>yeetbot_msgs</depend>
</package>
