<?xml version="1.0"?>
<package format="2">
  <name>yeetbot_msgs</name>
  <version>0.0.0</version>
  <description>The yeetbot_msgs package</description>

  <maintainer email="nrh16@ic.ac.uk">Nick Hafner</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>
  <depend>std_msgs</depend>
</package>
