<?xml version="1.0"?>
<package format="2">
  <name>yeetbot_natural_language</name>
  <version>0.0.0</version>
  <description>The yeetbot_natural_language package contains natural language processing (nlp) and natural language replying (nlr) nodes.</description>

  <maintainer email="as16@ic.ac.uk">Archit Sharma</maintainer>
  <license>MIT</license>


  <buildtool_depend>catkin</buildtool_depend>
</package>
