<?xml version="1.0"?>
<package format="2">
  <name>yeetbot_navigation</name>
  <version>0.0.0</version>
  <description>The yeetbot_navigation package contains the navigation pipeline for YEETBot3000</description>

  <maintainer email="sz4316@ic.ac.uk">Sergey Zhelyabovskiy</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>move_base</depend>
</package>
